# imageinfo-rs

./: Cargo.toml  LICENSE  README.md  README_CN.md  lefthook.yml
.github/workflows/: ci.yml  publish.yml
src/: defs.rs  lib.rs  main.rs  raw_buffer.rs  read_interface.rs  try_avif_heic.rs  try_bmp.rs  try_cur_ico.rs  try_gif.rs  try_icns.rs  try_jp2_jpx.rs  try_png.rs  try_psd.rs  try_tga.rs  try_tiff.rs  try_webp.rs
src/formats/: mod.rs  try_avif_heic.rs  try_bmp.rs  try_cur_ico.rs  try_dds.rs  try_gif.rs  try_hdr.rs  try_icns.rs  try_j2k.rs  try_jp2_jpx.rs  try_jpeg2000.rs  try_jpeg2000_code_stream.rs  try_jpg.rs  try_ktx.rs  try_png.rs  try_pnm.rs  try_psd.rs  try_qoi.rs  try_tga.rs  try_tiff.rs  try_webp.rs
tests/: images_test.rs
