[package]
name = "imageinfo"
description = "Rust library to get image size and format without loading/decoding."
license = "MIT"
repository = "https://github.com/xiaozhuai/imageinfo-rs"
version = "0.7.17"
authors = ["xiaozhuai <798047000@qq.com>"]
edition = "2018"
exclude = [
    "images",
    "tests",
]


[dependencies]
serde = { version = "1", features = ["derive"] }
